# claude-aftermovie-skill

./: .gitignore  CONTEXT.md  LICENSE  README.md  SKILL.md  pyproject.toml
assets/luts/: chill.cube  cinematic.cube  nostalgic.cube  punchy.cube
docs/: IMPROVEMENT_PLAN.md  RENDER_PERFORMANCE_PLAN.md
references/: gpmf.md  recipe.md  themes.md
scripts/: aftermovie.py  setup.sh
src/aftermovie/: __init__.py  __main__.py  cli.py  config.py  effective_config.py  env_config.py  ffmpeg_cmd.py  optional_dep.py  pipeline_runner.py  repos.py  state.py  themes.py  types.py
src/aftermovie/analyze/: analyze_cache.py  audio.py  capture_time.py  clip.py  duplicates.py  embedding.py  faces.py  live_photo.py  motion.py  orient.py  parallel.py  preferences.py  quality.py  selection.py  sidecar.py  still_filters.py  stills.py
src/aftermovie/import_sources/: __init__.py  base.py  gopro.py  gopro_icc.py  photos.py
src/aftermovie/mcp_server/: jobs.py  server.py
tests/: conftest.py  test_analyze_cache.py  test_capture_time.py  test_catalog_cache.py  test_chip.py  test_cli_cache.py  test_cli_import.py  test_diversity_trim.py  test_duplicates.py  test_dynamic_length.py  test_effective_config.py  test_encoder.py  test_faces_reframe.py  test_final_mux.py  test_gopro_icc.py  test_import_sources.py  test_mcp_tools.py  test_moment_budget.py  test_optional_dep.py  test_pacing_aware.py  test_parallel_analyze.py  test_parallel_prerender.py  test_phase3_pipeline.py  test_pipeline_runner.py  test_preferences.py  test_prerender_cache.py  test_quality.py  test_render_from_plan.py  test_render_progress.py  test_render_smoke.py  test_repos.py  test_score_components.py  test_score_components_registry.py  test_scorer.py  test_scorer_seams.py  test_select.py  test_select_frontend.py  test_selection_service.py  test_sidecar_store.py  test_song_picker.py  (+8 more)
tests/fixtures/: build.py
(+22 files in other folders)
